--- a/DBMeinv/Main.storyboard
+++ b/DBMeinv/Main.storyboard
@@ -227,15 +227,11 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z4U-aO-ftf">
                                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kPf-Zl-h1s">
-                                                    <rect key="frame" x="10" y="110" width="30" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="M7b-8F-gnx"/>
-                                                        <constraint firstAttribute="height" constant="30" id="kRc-lA-kkm"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title title title title title title title title title title title title " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u8g-4j-DnB">
-                                                    <rect key="frame" x="49" y="110" width="91" height="30"/>
+                                                    <rect key="frame" x="10" y="118" width="130" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="TY4-tO-mRS"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -243,21 +239,17 @@
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="kPf-Zl-h1s" secondAttribute="bottom" constant="10" id="7FN-fV-LRd"/>
                                             <constraint firstAttribute="trailing" secondItem="u8g-4j-DnB" secondAttribute="trailing" constant="10" id="97E-zv-F4w"/>
-                                            <constraint firstItem="u8g-4j-DnB" firstAttribute="leading" secondItem="kPf-Zl-h1s" secondAttribute="trailing" constant="9" id="BAU-Qg-Ogv"/>
+                                            <constraint firstAttribute="bottom" secondItem="u8g-4j-DnB" secondAttribute="bottom" constant="2" id="CRC-Jc-Wra"/>
+                                            <constraint firstItem="u8g-4j-DnB" firstAttribute="leading" secondItem="LLn-iC-OmO" secondAttribute="leading" constant="10" id="CyL-nU-5kW"/>
                                             <constraint firstItem="Z4U-aO-ftf" firstAttribute="top" secondItem="LLn-iC-OmO" secondAttribute="top" id="DA5-0s-1Ik"/>
-                                            <constraint firstItem="u8g-4j-DnB" firstAttribute="top" secondItem="kPf-Zl-h1s" secondAttribute="top" id="Zkn-70-TeI"/>
-                                            <constraint firstItem="u8g-4j-DnB" firstAttribute="bottom" secondItem="kPf-Zl-h1s" secondAttribute="bottom" id="cc0-Nf-uCh"/>
                                             <constraint firstAttribute="bottom" secondItem="Z4U-aO-ftf" secondAttribute="bottom" id="fcj-49-Xf8"/>
-                                            <constraint firstItem="kPf-Zl-h1s" firstAttribute="leading" secondItem="LLn-iC-OmO" secondAttribute="leading" constant="10" id="iUO-9e-pk3"/>
                                             <constraint firstAttribute="trailing" secondItem="Z4U-aO-ftf" secondAttribute="trailing" id="mn1-D0-JnH"/>
                                             <constraint firstItem="Z4U-aO-ftf" firstAttribute="leading" secondItem="LLn-iC-OmO" secondAttribute="leading" id="n6B-un-e4K"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="bigImageView" destination="Z4U-aO-ftf" id="Sok-GG-U2l"/>
                                             <outlet property="titleLabel" destination="u8g-4j-DnB" id="J8L-tY-Ycs"/>
-                                            <outlet property="userPhotoImageView" destination="kPf-Zl-h1s" id="Drq-tE-YED"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
